Header navigation styles done

--- a/src/CSS/_variables.scss
+++ b/src/CSS/_variables.scss
@@ -5,11 +5,11 @@ $font-family: 'Roboto', sans-serif;
 $second-font: 'Nunito', sans-serif;
 //Colors
  //-Primary
-$primary: #3C0DE0;
+$primary: #180850;
 $complementary: #8ba000;
  //-Neutral
 $error: #e03b0d;
 $secondary: #a40de0;
 $secondary2: #7A10D3;
-$background: #FFF;
+$background: rgb(165, 147, 147);
 $onBack: #000;
