--- a/src/CSS/main.css
+++ b/src/CSS/main.css
@@ -16,7 +16,7 @@ body {
   flex-direction: column;
   font-family: "Roboto", sans-serif;
   font-size: 18px;
-  letter-spacing: 0, 5px;
+  letter-spacing: 0.5px;
 }
 
 a {
@@ -31,48 +31,81 @@ ul, ol {
 
 h1 {
   font-weight: 100;
-  font-size: 5, 334rem;
-  letter-spacing: 0, 834rem;
+  font-size: 5.334rem;
+  letter-spacing: -0.0834rem;
 }
 
 h2 {
   font-weight: 100;
-  font-size: 3, 334rem;
-  letter-spacing: 0, 278rem;
+  font-size: 3.334rem;
+  letter-spacing: -0.0278rem;
 }
 
 h3 {
   font-weight: 400;
-  font-size: 2, 6668rem;
+  font-size: 2.6668rem;
 }
 
 h4 {
   font-weight: 400;
-  font-size: 1, 8889rem;
-  letter-spacing: 0, 139rem;
+  font-size: 1.8889rem;
+  letter-spacing: 0.0139rem;
 }
 
 h5 {
   font-weight: 400;
-  font-size: 1, 3334rem;
+  font-size: 1.3334rem;
 }
 
 h6 {
   font-weight: 700;
-  font-size: 1, 1111rem;
-  letter-spacing: 0, 83rem;
+  font-size: 1.1111rem;
+  letter-spacing: 0.0083rem;
 }
 
 .subT-1 {
   font-family: "Nunito", sans-serif;
   font-weight: 400;
-  font-size: 0, 8889rem;
-  letter-spacing: 0, 83rem;
+  font-size: 0.8889rem;
+  letter-spacing: 0.0083rem;
 }
 
 .subT-2 {
   font-family: "Nunito", sans-serif;
   font-weight: 600;
-  font-size: 0, 7778rem;
-  letter-spacing: 0, 83rem;
+  font-size: 0.7778rem;
+  letter-spacing: 0.0083rem;
+}
+
+.cryptoverse_header_navgation {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1.1111rem 1.6667rem;
+  background: #180850;
+  color: #a59393;
+}
+.cryptoverse_header_navgation .cryptoverse_header_navgation-logo {
+  display: flex;
+  flex-direction: column;
+}
+.cryptoverse_header_navgation .cryptoverse_header_navgation-logo img {
+  width: 100px;
+  margin: 5px auto;
+}
+.cryptoverse_header_navgation .cryptoverse_header_navgation-menu .cryptoverse_header_navgation-menu-links {
+  display: flex;
+}
+.cryptoverse_header_navgation .cryptoverse_header_navgation-menu .cryptoverse_header_navgation-menu-links li {
+  margin: 0 10px;
+}
+
+@media screen and (max-width: 700px) {
+  .cryptoverse_header_navgation .cryptoverse_header_navgation-menu .cryptoverse_header_navgation-menu-links {
+    flex-direction: column;
+    text-align: right;
+  }
+  .cryptoverse_header_navgation .cryptoverse_header_navgation-menu .cryptoverse_header_navgation-menu-links li {
+    margin-bottom: 8px;
+  }
 }/*# sourceMappingURL=main.css.map */
