--- a/src/CSS/main.css
+++ b/src/CSS/main.css
@@ -108,4 +108,19 @@ h6 {
   .cryptoverse_header_navgation .cryptoverse_header_navgation-menu .cryptoverse_header_navgation-menu-links li {
     margin-bottom: 8px;
   }
+}
+.cryptoverse_footer {
+  background: #180850;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 1.1111rem 1.6667rem 0;
+  color: #a59393;
+}
+.cryptoverse_footer .cryptoverse_footer-navigation .cryptoverse_header_navgation-menu-links {
+  display: flex;
+}
+.cryptoverse_footer .cryptoverse_footer-navigation .cryptoverse_header_navgation-menu-links li {
+  margin: 0 10px 10px 10px;
 }/*# sourceMappingURL=main.css.map */
