--- a/src/CSS/_globals.scss
+++ b/src/CSS/_globals.scss
@@ -7,6 +7,7 @@
   
   html {
     overflow-x: hidden;
+    font-size: $font-size;
   }
     
   body {
@@ -14,8 +15,8 @@
     flex-direction: column;
     //position: relative;
     font-family: $font-family;
-    font-size: $font-size;
     letter-spacing: 0.5px;
+    font-size: 1rem;
   }
     
   a {
@@ -64,9 +65,10 @@
 
   .subT-1 {
     font-family: $second-font;
-    font-weight: 400;
+    font-weight: 600;
     font-size: 0.8889rem;
-    letter-spacing: 0.0083rem;    
+    letter-spacing: 0.0083rem;
+    color: $complementary;
   }
 
   .subT-2 {
@@ -74,6 +76,7 @@
     font-weight: 600;
     font-size: 0.7778rem;
     letter-spacing: 0.0083rem;
+    color: $complementary;
   }
   //Mixins
   @mixin btn {
@@ -92,4 +95,22 @@
     font-weight: 400;
     font-size: 0.5556rem;
     letter-spacing: 0.0833rem;
+  }
+
+  @media screen and (max-width: 1190px) {
+    html {
+      font-size: 14px;
+    }
+  }
+
+  @media screen and (max-width: 940px) {
+    h2 {
+      font-size: 3rem;
+    }
+  }
+
+  @media screen and (max-width: 860px) {
+    h2 {
+      font-size: 2.5rem;
+    }
   }
