--- a/src/CSS/main.css
+++ b/src/CSS/main.css
@@ -101,7 +101,7 @@ h6 {
   align-items: center;
   padding: 1.1111rem 1.6667rem;
   background: #180850;
-  color: #e6e9f0;
+  color: #d5d8df;
 }
 .cryptoverse_header_navgation .cryptoverse_header_navgation-logo {
   display: flex;
@@ -131,7 +131,7 @@ h6 {
   display: flex;
   flex-direction: column;
   padding: 10px 20px;
-  background: #e6e9f0;
+  background: #d5d8df;
 }
 .cryptoverse_main-content_homepage .cryptoverse_main-content_homepage-cardscontainer {
   display: grid;
@@ -160,6 +160,10 @@ h6 {
 }
 
 @media screen and (max-width: 450px) {
+  .cryptoverse_main-content_homepage .cryptoverse_main-content_homepage-cardscontainer {
+    display: flex;
+    flex-direction: column;
+  }
   .cryptoverse_main-content_homepage .cryptoverse_main-content_homepage-cryptoheadings {
     flex-direction: column;
   }
@@ -167,6 +171,73 @@ h6 {
     flex-direction: column;
   }
 }
+.cryptoverse_main-content_cryptocurrencies {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: #d5d8df;
+}
+.cryptoverse_main-content_cryptocurrencies .cryptoverse_main-content_cryptocurrencies-search {
+  display: flex;
+  width: 100%;
+  margin-bottom: 20px;
+}
+.cryptoverse_main-content_cryptocurrencies .cryptoverse_main-content_cryptocurrencies-search input {
+  width: 90%;
+  height: 40px;
+  margin: auto;
+  margin-top: 20px;
+  padding: 5px;
+  border-radius: 8px;
+  outline: 5px solid #8ba000;
+}
+.cryptoverse_main-content_cryptocurrencies .cryptoverse_main-content_cryptocurrencies-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  width: 100%;
+}
+.cryptoverse_main-content_cryptocurrencies .cryptoverse_main-content_cryptocurrencies-container .cryptoverse_main-content_cryptocurrencies-container-card {
+  display: flex;
+  flex-direction: column;
+  background: #FFF;
+  min-height: 200px;
+  padding: 10px;
+  margin: 10px;
+}
+.cryptoverse_main-content_cryptocurrencies .cryptoverse_main-content_cryptocurrencies-container .cryptoverse_main-content_cryptocurrencies-container-card .cryptoverse_main-content_cryptocurrencies-container-card-header {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+.cryptoverse_main-content_cryptocurrencies .cryptoverse_main-content_cryptocurrencies-container .cryptoverse_main-content_cryptocurrencies-container-card .cryptoverse_main-content_cryptocurrencies-container-card-header img {
+  width: 40px;
+}
+.cryptoverse_main-content_cryptocurrencies .cryptoverse_main-content_cryptocurrencies-container .cryptoverse_main-content_cryptocurrencies-container-card .cryptoverse_main-content_cryptocurrencies-container-card-infos {
+  margin-top: 35px;
+  line-height: 40px;
+}
+.cryptoverse_main-content_cryptocurrencies .cryptoverse_main-content_cryptocurrencies-container .cryptoverse_main-content_cryptocurrencies-container-card .cryptoverse_main-content_cryptocurrencies-container-card-infos p span {
+  color: #8ba000;
+  font-weight: 600;
+}
+
+/*
+.cryptoverse_main-content_cryptocurrencies {
+
+  .cryptoverse_main-content_cryptocurrencies-search {}
+
+  .cryptoverse_main-content_cryptocurrencies-container {
+
+      .cryptoverse_main-content_cryptocurrencies-container-card {
+
+        .cryptoverse_main-content_cryptocurrencies-container-card-header {}
+
+        .cryptoverse_main-content_cryptocurrencies-container-card-infos {}
+    }
+  }
+}
+*/
 .cryptoverse_footer {
   background: #180850;
   display: flex;
@@ -174,11 +245,14 @@ h6 {
   justify-content: center;
   align-items: center;
   padding: 1.1111rem 1.6667rem 0;
-  color: #e6e9f0;
+  color: #d5d8df;
 }
 .cryptoverse_footer .cryptoverse_footer-navigation .cryptoverse_header_navgation-menu-links {
   display: flex;
 }
 .cryptoverse_footer .cryptoverse_footer-navigation .cryptoverse_header_navgation-menu-links li {
   margin: 0 10px 10px 10px;
+}
+.cryptoverse_footer p {
+  margin-bottom: 10px;
 }/*# sourceMappingURL=main.css.map */
