--- a/src/CSS/_homePage.scss
+++ b/src/CSS/_homePage.scss
@@ -19,6 +19,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin: 30px 0;
 
     h4 {
       color: $complementary;
@@ -29,6 +30,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin: 30px 0;
 
     h4 {
       color: $complementary;
