--- a/src/CSS/main.css
+++ b/src/CSS/main.css
@@ -80,6 +80,11 @@ h6 {
   color: #8ba000;
 }
 
+.jstcontainer {
+  display: flex;
+  justify-content: space-between;
+}
+
 @media screen and (max-width: 1190px) {
   html {
     font-size: 14px;
@@ -362,6 +367,125 @@ h6 {
   }
 }
 */
+.cryptoverse_main-content_cryptodetails {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 20px;
+}
+.cryptoverse_main-content_cryptodetails .cryptoverse_main-content_cryptodetails-headers {
+  text-align: center;
+}
+.cryptoverse_main-content_cryptodetails form {
+  max-width: 300px;
+}
+.cryptoverse_main-content_cryptodetails form label select {
+  width: 90%;
+  height: 40px;
+  margin: auto;
+  margin-top: 20px;
+  padding: 5px;
+  border-radius: 8px;
+  outline: 5px solid #8ba000;
+}
+.cryptoverse_main-content_cryptodetails .cryptoverse_main-content_cryptodetails-stats {
+  width: 90%;
+  margin: 0 auto;
+}
+.cryptoverse_main-content_cryptodetails .cryptoverse_main-content_cryptodetails-stats .cryptoverse_main-content_cryptodetails-stats-statistics {
+  display: flex;
+  justify-content: space-between;
+  margin: 20px 0;
+}
+.cryptoverse_main-content_cryptodetails .cryptoverse_main-content_cryptodetails-stats .cryptoverse_main-content_cryptodetails-stats-statistics .cryptoverse_main-content_cryptodetails-stats-statistics-headings {
+  flex: 1;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+}
+.cryptoverse_main-content_cryptodetails .cryptoverse_main-content_cryptodetails-stats .cryptoverse_main-content_cryptodetails-stats-statistics .cryptoverse_main-content_cryptodetails-stats-statistics-headings h3 {
+  text-align: center;
+}
+.cryptoverse_main-content_cryptodetails .cryptoverse_main-content_cryptodetails-stats .cryptoverse_main-content_cryptodetails-stats-statistics .cryptoverse_main-content_cryptodetails-stats-statistics-headings h5 {
+  text-align: center;
+}
+.cryptoverse_main-content_cryptodetails .cryptoverse_main-content_cryptodetails-stats .cryptoverse_main-content_cryptodetails-stats-statistics .cryptoverse_main-content_cryptodetails-stats-statistics-headings .cryptoverse_main-content_cryptodetails-stats-statistics-names {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 10px;
+  margin-top: 20px;
+}
+.cryptoverse_main-content_cryptodetails .cryptoverse_main-content_cryptodetails-stats .cryptoverse_main-content_cryptodetails-stats-statistics .cryptoverse_main-content_cryptodetails-stats-statistics-headings .cryptoverse_main-content_cryptodetails-stats-statistics-names p:nth-child(2) {
+  color: #8ba000;
+}
+.cryptoverse_main-content_cryptodetails .cryptoverse_main-content_cryptodetails-stats .cryptoverse_main-content_cryptodetails-stats-statistics .cryptoverse_main-content_cryptodetails-stats-otherstatistics-headings {
+  flex: 1;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+}
+.cryptoverse_main-content_cryptodetails .cryptoverse_main-content_cryptodetails-stats .cryptoverse_main-content_cryptodetails-stats-statistics .cryptoverse_main-content_cryptodetails-stats-otherstatistics-headings h3 {
+  text-align: center;
+}
+.cryptoverse_main-content_cryptodetails .cryptoverse_main-content_cryptodetails-stats .cryptoverse_main-content_cryptodetails-stats-statistics .cryptoverse_main-content_cryptodetails-stats-otherstatistics-headings h5 {
+  text-align: center;
+}
+.cryptoverse_main-content_cryptodetails .cryptoverse_main-content_cryptodetails-stats .cryptoverse_main-content_cryptodetails-stats-statistics .cryptoverse_main-content_cryptodetails-stats-otherstatistics-headings .cryptoverse_main-content_cryptodetails-stats-otherstatistics-names {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 10px;
+  margin-top: 20px;
+}
+.cryptoverse_main-content_cryptodetails .cryptoverse_main-content_cryptodetails-stats .cryptoverse_main-content_cryptodetails-stats-statistics .cryptoverse_main-content_cryptodetails-stats-otherstatistics-headings .cryptoverse_main-content_cryptodetails-stats-otherstatistics-names p:nth-child(2) {
+  color: #8ba000;
+}
+.cryptoverse_main-content_cryptodetails .cryptoverse_main-content_cryptodetails-descrption_links {
+  display: flex;
+  padding: 10px;
+  justify-content: space-between;
+}
+.cryptoverse_main-content_cryptodetails .cryptoverse_main-content_cryptodetails-descrption_links .cryptoverse_main-content_cryptodetails-descrption_links-desc {
+  flex: 1;
+  padding: 10px;
+}
+.cryptoverse_main-content_cryptodetails .cryptoverse_main-content_cryptodetails-descrption_links .cryptoverse_main-content_cryptodetails-descrption_links-desc h3 {
+  font-weight: 600;
+}
+.cryptoverse_main-content_cryptodetails .cryptoverse_main-content_cryptodetails-descrption_links .cryptoverse_main-content_cryptodetails-descrption_links-desc h3:first-child {
+  color: #8ba000;
+}
+.cryptoverse_main-content_cryptodetails .cryptoverse_main-content_cryptodetails-descrption_links .cryptoverse_main-content_cryptodetails-descrption_links-desc h3:not(:first-child) {
+  font-size: 1.5rem;
+}
+.cryptoverse_main-content_cryptodetails .cryptoverse_main-content_cryptodetails-descrption_links .cryptoverse_main-content_cryptodetails-descrption_links-links {
+  flex: 1;
+  padding: 10px;
+  text-align: center;
+}
+.cryptoverse_main-content_cryptodetails .cryptoverse_main-content_cryptodetails-descrption_links .cryptoverse_main-content_cryptodetails-descrption_links-links h3 {
+  color: #8ba000;
+  font-weight: 600;
+}
+.cryptoverse_main-content_cryptodetails .cryptoverse_main-content_cryptodetails-descrption_links .cryptoverse_main-content_cryptodetails-descrption_links-links div {
+  display: flex;
+  justify-content: space-between;
+}
+.cryptoverse_main-content_cryptodetails .cryptoverse_main-content_cryptodetails-descrption_links .cryptoverse_main-content_cryptodetails-descrption_links-links div h5 {
+  font-weight: 600;
+  margin-top: 10px;
+}
+.cryptoverse_main-content_cryptodetails .cryptoverse_main-content_cryptodetails-descrption_links .cryptoverse_main-content_cryptodetails-descrption_links-links div a {
+  color: #8ba000;
+}
+
+@media screen and (max-width: 720px) {
+  .cryptoverse_main-content_cryptodetails .cryptoverse_main-content_cryptodetails-stats .cryptoverse_main-content_cryptodetails-stats-statistics {
+    flex-direction: column;
+  }
+  .cryptoverse_main-content_cryptodetails .cryptoverse_main-content_cryptodetails-descrption_links {
+    flex-direction: column;
+  }
+}
 .cryptoverse_footer {
   background: #180850;
   display: flex;
